tb-ingress-20201127.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"ingress.kubernetes.io/ssl-redirect":"false","kubernetes.io/ingress.class":"traefik","traefik.ingress.kubernetes.io/rule-type":"PathPrefix","traefik.ingress.kubernetes.io/use-regex":"true"},"name":"tb-ingress","namespace":"default"},"spec":{"rules":[{"host":"tb-http-transport.orchid.test.strapkube.com","http":{"paths":[{"backend":{"serviceName":"tb-http-transport","servicePort":8080},"path":"/api/v1/"}]}},{"host [...]
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefix
    traefik.ingress.kubernetes.io/use-regex: "true"
  creationTimestamp: "2020-02-24T12:25:23Z"
  generation: 1
  name: tb-ingress
  namespace: default
  resourceVersion: "7150014"
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/tb-ingress
  uid: ba94373a-5700-11ea-8847-124090f11b2c
spec:
  rules:
  - host: tb-http-transport.orchid.test.strapkube.com
    http:
      paths:
      - backend:
          serviceName: tb-http-transport
          servicePort: 8080
        path: /api/v1/
  - host: tb-node.orchid.test.strapkube.com
    http:
      paths:
      - backend:
          serviceName: tb-node
          servicePort: 8080
        path: /static/rulenode/
      - backend:
          serviceName: tb-node
          servicePort: 8080
        path: /
  - host: tb-web-ui.orchid.test.strapkube.com
    http:
      paths:
      - backend:
          serviceName: tb-http-transport
          servicePort: 8080
        path: /api/v1/
      - backend:
          serviceName: tb-node
          servicePort: 8080
        path: /static/rulenode/
      - backend:
          serviceName: tb-web-ui
          servicePort: 8080
        path: /static/
      - backend:
          serviceName: tb-web-ui
          servicePort: 8080
        path: /index.html
      - backend:
          serviceName: tb-node
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - tb-http-transport.orchid.test.strapkube.com
    - tb-node.orchid.test.strapkube.com
    - tb-web-ui.orchid.test.strapkube.com
status:
  loadBalancer: {}
